--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
 
       .container {
-        background: white;
+        background-color: white;
         border-radius: 16px;
         box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
         width: 100%;
@@ -49,7 +49,7 @@
       }
 
       .left-panel {
-        background: #4b3bff;
+        background-color: #4b3bff;
         padding: 32px;
         position: relative;
         display: flex;
@@ -65,7 +65,7 @@
       .logo {
         width: 36px;
         height: 36px;
-        background: white;
+        background-color: white;
         border-radius: 8px;
         margin-bottom: 24px;
         transition: transform 0.3s;
@@ -117,14 +117,14 @@
         border-radius: 8px;
         font-size: 0.9rem;
         transition: all 0.3s;
-        background: #f8f9fa;
+        background-color: #f8f9fa;
       }
 
       input:focus,
       select:focus {
         outline: none;
         border-color: #4b3bff;
-        background: white;
+        background-color: white;
         box-shadow: 0 0 0 4px rgba(75, 59, 255, 0.1);
       }
 
@@ -146,7 +146,7 @@
       .strength-indicator {
         height: 3px;
         flex-grow: 1;
-        background: #e1e1e1;
+        background-color: #e1e1e1;
         border-radius: 2px;
         overflow: hidden;
       }
@@ -158,19 +158,19 @@
       }
 
       .weak {
-        background: #dc2626;
+        background-color: #dc2626;
       }
       .medium {
-        background: #f59e0b;
+        background-color: #f59e0b;
       }
       .strong {
-        background: #22c55e;
+        background-color: #22c55e;
       }
 
       button {
         width: 100%;
         padding: 10px;
-        background: #4b3bff;
+        background-color: #4b3bff;
         color: white;
         border: none;
         border-radius: 8px;
@@ -187,7 +187,7 @@
       }
 
       button:enabled:hover {
-        background: #3929cc;
+        background-color: #3929cc;
         transform: translateY(-2px);
       }
 
